--- a/style.css
+++ b/style.css
@@ -1,11 +1,40 @@
+@keyframes bgcolor {
+    0% {
+        background-color: #FFD700;
+    }
+
+    30% {
+        background-color: #FFDF00;
+    }
+
+    60% {
+        background-color: #E55934;
+    }
+
+    90% {
+        background-color: #D4AF37;
+    }
+
+    100% {
+        background-color: #CFB53B;
+    }
+}
 body {
 	background-color: #D4D2D5;
 	text-align: center;
 	color: white;
+	-webkit-animation: bgcolor 20s infinite;
+    animation: bgcolor 10s infinite;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;
 }
 
+button {
+	text-align: center;
+	}
+
 h1 {
-	color: #107E7D;
+	color: black;
 	font-family: 'Century-Gothic', sans-serif;
 	font-size: 100px;
 	text-transform: bold;
@@ -14,11 +43,12 @@ h1 {
 }
 
 p{
-	color: #107E7D;
+	color: black;
+	font-size: 20px;
 }
 
 h3 {
-	color: #A17C6B;
+	color: #28112B;
 	padding: 0;
 	margin: 0px;
 }
@@ -29,12 +59,38 @@ img {
 #game-board {
 	background-color: white;
 	text-align: center;
-	border: 5px solid #6C969D;
+	border: 5px solid black;
   	border-radius: 50px 20px;
   	padding: 5px;
   	width: 1250px;
   	display: inline-block;
+  	box-shadow: 20px 20px 50px 10px black;  	
 }
+
 button{
 	padding: 5px;
+}
+img{
+	opacity: 1;
+}
+img:active {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s; 
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite; 
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
